# pea

./: .gitignore  data_generator.py  wyniki.csv
pea_project/: CMakeCache.txt  CMakeLists.txt  Result.h  algorithmrunner.cpp  algorithmrunner.h  array.cpp  array.h  build.ninja  etap_1.cpp  filehandler_tsplib.cpp  filehandler_tsplib.h  main.cpp  nic.cpp  nic.h  qtcsettings.cmake  wektor.cpp  wektor.h
pea_project/.cmake/api/v1/reply/: cache-v2-0a870c1c3f1e4a88528c.json  cmakeFiles-v1-92e04964c9bd7d1e7462.json  codemodel-v2-e1d884e8df0cef0eb643.json  index-2026-03-31T13-44-30-0660.json
pea_project/.qtc_clangd/.cache/clangd/index/: __stddef_null.h.B586D47C621E4916.idx  __stddef_ptrdiff_t.h.AD63A9290BA8509D.idx  __stddef_size_t.h.24A4BB4AB59B936C.idx  algorithmrunner.h.7A5E9B13654D4855.idx  alloc_traits.h.5CF5F0A69C036EAA.idx  array.184FFFD3B962987A.idx  array.h.A5CD5F080BA7DDFE.idx  atomic_timed_wait.h.798326501497FE2F.idx  basic_string.h.636F8FA9AD80474A.idx  beta_function.tcc.BB2C84D19DC363B5.idx  charconv.6A848A0E861968AF.idx  charconv.h.45DC5854263DB0A4.idx  chrono_io.h.995731C60FEB6240.idx  exception.h.60232BC787A23EFB.idx  exp_integral.tcc.1F7D80B18BC21F99.idx  format.4B90EEE1F738E4F0.idx  iosfwd.163CBDA627BDB3A3.idx  legendre_function.tcc.31F49C26DFFE04AE.idx  locale_conv.h.81B3C2817FCA79B1.idx  main.cpp.989DEA2FF8BF8FCF.idx  max_size_type.h.C90D4190D412E7BD.idx  mutex.D78ECE774B527331.idx  nic.h.3F339CADD5C763FF.idx  ostream.58D697360ADB0420.idx  (+24 more)
program/: .gitignore  CMakeLists.txt  algorithmrunner.cpp  algorithmrunner.h  array.cpp  array.h  cmake_install.cmake  config.h  doublelista.cpp  doublelista.h  etap_1.cpp  etap_1.h  etap_2.cpp  etap_2.h  filehandler_tsplib.cpp  filehandler_tsplib.h  main.cpp  menudisplayer.cpp  menudisplayer.h  node.cpp  node.h  node_bfs.cpp  node_bfs.h  nodepriorityqueue.cpp  nodepriorityqueue.h  nodequeue.cpp  nodequeue.h  nodestack.cpp  nodestack.h  parser.cpp  parser.h  stack.cpp  stack.h  wektor.cpp  wektor.h
program/.qtc_clangd/: compile_commands.json
(+274 files in other folders)
